infrastructure/k8s/overlays/aws/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medicore-alb-ingress
  namespace: medicore-env-dev
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aws-frontend-app-prod
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: aws-api-gateway-prod
                port:
                  number: 80
